--- a/css/vpon.css
+++ b/css/vpon.css
@@ -1,4 +1,5 @@
 @import url(../css/reset.css);
+@import url("https://fonts.googleapis.com/css?family=Raleway:900");
 .container {
   position: relative;
   -webkit-animation: light 2s ease-in;
@@ -190,3 +191,120 @@
   text-decoration: none; }
   .modal-close:hover {
     color: black; }
+
+.mobile-message {
+  display: none; }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .mobile-message {
+    display: inline; }
+  .web-message {
+    display: none; }
+  .container {
+    opacity: 0.4; }
+    .container .fortuneBasket {
+      display: none; }
+    .container .fortunePaper {
+      display: none; }
+  .message {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0; } }
+
+body {
+  font-family: Raleway, serif; }
+
+svg {
+  width: 80vw;
+  position: fixed;
+  top: 50vh;
+  left: 50vw;
+  max-width: 430px;
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  -ms-transform: translateY(-50%) translateX(-50%);
+  transform: translateY(-50%) translateX(-50%);
+  z-index: 2;
+  -webkit-filter: drop-shadow(0 0 40px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(0 0 40px rgba(0, 0, 0, 0.3)); }
+  svg path {
+    cursor: pointer;
+    -webkit-animation: blob 2s infinite forwards;
+    animation: blob 2s infinite forwards;
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    transform-origin: 50% 50%; }
+    svg path:hover {
+      fill: #fafafa; }
+  svg text {
+    font-size: 45px; }
+
+@-webkit-keyframes blob {
+  25% {
+    d: path("M 90 210 C 90 180 110 160 130 160 C 160 160 180 140 200 130 C 230 120 270 100 290 140 C 310 170 340 100 360 140 C 370 160 390 180 390 210 C 390 240 380 290 350 280 C 330 270 300 280 280 290 C 260 300 230 300 220 290 C 200 270 160 310 140 280 C 130 260 90 240 90 210 ");
+    -webkit-transform: rotate(-5deg);
+    transform: rotate(-5deg); }
+  50% {
+    d: path("M 90 210 C 90 180 100 150 120 130 C 150 100 180 140 200 130 C 230 120 270 100 290 140 C 300 160 330 130 360 140 C 390 150 390 180 390 210 C 390 240 380 300 350 280 C 330 270 320 230 280 260 C 260 280 220 310 200 290 C 180 270 160 280 140 280 C 110 280 90 240 90 210"); }
+  75% {
+    d: path("M 90 210 C 90 180 110 180 130 170 C 150 160 170 130 200 130 C 240 130 260 150 290 140 C 310 130 340 120 360 140 C 380 160 390 180 390 210 C 390 240 380 260 350 270 C 320 280 290 270 270 260 C 240 250 230 280 210 290 C 180 310 130 300 110 280 C 90 260 90 240 90 210");
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg); } }
+
+@keyframes blob {
+  25% {
+    d: path("M 90 210 C 90 180 110 160 130 160 C 160 160 180 140 200 130 C 230 120 270 100 290 140 C 310 170 340 100 360 140 C 370 160 390 180 390 210 C 390 240 380 290 350 280 C 330 270 300 280 280 290 C 260 300 230 300 220 290 C 200 270 160 310 140 280 C 130 260 90 240 90 210 ");
+    -webkit-transform: rotate(-5deg);
+    transform: rotate(-5deg); }
+  50% {
+    d: path("M 90 210 C 90 180 100 150 120 130 C 150 100 180 140 200 130 C 230 120 270 100 290 140 C 300 160 330 130 360 140 C 390 150 390 180 390 210 C 390 240 380 300 350 280 C 330 270 320 230 280 260 C 260 280 220 310 200 290 C 180 270 160 280 140 280 C 110 280 90 240 90 210"); }
+  75% {
+    d: path("M 90 210 C 90 180 110 180 130 170 C 150 160 170 130 200 130 C 240 130 260 150 290 140 C 310 130 340 120 360 140 C 380 160 390 180 390 210 C 390 240 380 260 350 270 C 320 280 290 270 270 260 C 240 250 230 280 210 290 C 180 310 130 300 110 280 C 90 260 90 240 90 210");
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg); } }
+
+.web-message p {
+  position: fixed;
+  max-width: 30em;
+  top: 10%;
+  left: 10%;
+  background-color: #fff;
+  padding: 1.125em 1.5em;
+  font-size: 1.25em;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2); }
+
+.web-message p::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: 100%;
+  left: 1.5em;
+  border: .75rem solid transparent;
+  border-top: none;
+  border-bottom-color: #fff;
+  -webkit-filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1)); }
+
+button {
+  display: block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border: 2px solid #f5f5f5;
+  border-radius: 50%;
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  background: #464646;
+  -webkit-box-shadow: 0 0 3px gray;
+  box-shadow: 0 0 3px gray;
+  font-size: 20px;
+  font-weight: bold;
+  margin: auto; }
+
+button:hover {
+  background: #262626; }
