--- a/css/vpon.css
+++ b/css/vpon.css
@@ -211,7 +211,9 @@
     top: 0;
     right: 0;
     left: 0;
-    bottom: 0; } }
+    bottom: 0; }
+  .link-show {
+    visibility: hidden; } }
 
 body {
   font-family: Raleway, serif; }
@@ -264,30 +266,34 @@ svg {
     -webkit-transform: rotate(5deg);
     transform: rotate(5deg); } }
 
-.web-message p {
-  position: fixed;
-  max-width: 30em;
-  top: 10%;
-  left: 10%;
-  background-color: #fff;
-  padding: 1.125em 1.5em;
-  font-size: 1.25em;
-  border-radius: 1rem;
-  -webkit-box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2); }
-
-.web-message p::before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  bottom: 100%;
-  left: 1.5em;
-  border: .75rem solid transparent;
-  border-top: none;
-  border-bottom-color: #fff;
-  -webkit-filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1));
-  filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1)); }
+.web-message {
+  visibility: hidden;
+  text-align: center; }
+  .web-message p {
+    position: fixed;
+    max-width: 20em;
+    top: 20%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #fff;
+    padding: 1.125em 1.5em;
+    font-size: 1.25em;
+    border-radius: 1rem;
+    -webkit-box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2); }
+  .web-message p::before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    bottom: 100%;
+    left: 1.5em;
+    border: .75rem solid transparent;
+    border-top: none;
+    border-bottom-color: #fff;
+    -webkit-filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1)); }
 
 button {
   display: block;
@@ -304,7 +310,14 @@ button {
   box-shadow: 0 0 3px gray;
   font-size: 20px;
   font-weight: bold;
-  margin: auto; }
+  margin: auto;
+  cursor: pointer; }
 
 button:hover {
   background: #262626; }
+
+.link-show {
+  position: fixed;
+  bottom: 10vh;
+  left: 0;
+  right: 0; }
